--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,16 @@
 plugins {
     id 'java'
     id 'application'
-    id 'checkstyle'
-    id 'com.github.johnrengelman.shadow' version '5.1.0'
+    id 'org.openjfx.javafxplugin' version '0.0.7'
 }
-
-group 'duke'
-version '0.1.0'
 
 repositories {
     mavenCentral()
 }
 
-shadowJar {
-    archiveBaseName = "duke"
-    archiveVersion = "0.1.3"
-    archiveClassifier = null
-    archiveAppendix = null
-}
-
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.5.1'
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.5.1')
 }
 
 test {
@@ -29,5 +19,17 @@ test {
 
 application {
     // Change this to your main class.
-    mainClassName = "duke.Duke"
+    mainClassName = "duke.Launcher"
 }
+
+javafx {
+    version = "11.0.2"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+run {
+    standardInput = System.in
+}
+
+group 'duke'
+version '0.1.0'
